FINERACT-823 Gradle modernizer fixing violations