@@ -46,7 +46,7 @@ public class VariableInstallmentsFlatHelper {
                 .withInterestTypeAsFlat() //
                 .withTranches(multiDisburseLoan) //
                 .withInterestCalculationPeriodTypeAsRepaymentPeriod(true)//
-                .withVariableInstallmentsConfig(Boolean.TRUE, new Integer(5), new Integer(90))//
+                .withVariableInstallmentsConfig(Boolean.TRUE, Integer.valueOf(5), Integer.valueOf(90))//
                 .withAccounting(accountingRule, accounts).build(null);
         return loanProductJSON ;
     }
